--- a/packages/ui/src/app.css
+++ b/packages/ui/src/app.css
@@ -100,3 +100,7 @@ body,
         background-position: 100% 0;
     }
 }
+
+.rainbow-gradient {
+  background-image: linear-gradient(90deg, #ff0000, #ff8000, #ffff00, #80ff00, #00ff00, #00ff80, #00ffff, #0080ff);
+}
